aligned and fixed radius on showList navbar

--- a/frontend/src/components/ShowList/ShowList.css
+++ b/frontend/src/components/ShowList/ShowList.css
@@ -1,29 +1,40 @@
 .shows-navbar {
   display: flex;
   gap: 2rem;
-  align-items: flex-start;
+  width: 100%;
+  align-items: center;
+
 }
 
 .show-sort {
-  cursor: pointer;
+  border-radius: 1rem;
 }
 
 .filter-btn {
-  cursor: pointer;
+  border-radius: 1rem;
 }
 
 .show-sort,
-.filter-btn,
-.search-submit {
+.filter-btn {
   height: 2rem;
-  border-radius: 1rem;
   border: 1px solid #F15A29;
   cursor: pointer;
 }
 
+.search-submit {
+  position: relative;
+  left: -1rem;
+  border: 1px solid #F15A29;
+  background-color: white;
+  height: 2rem;
+  width: 2rem;
+  border-radius: 1rem;
+
+}
+
 .show-search {
   height: 2rem;
-  border-radius: 1rem;
+  border-radius: 1rem 0 0 1rem;
   border: 1px solid #F15A29;
 }
 
